<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shared Park</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_extra">Extra</string>

    <string name="title_section1">Shared Parking</string>
    <string name="title_section2">Places</string>
    <string name="title_section3">Reservations</string>
    <string name="title_section4">Inquiries</string>
    <string name="title_section5">Vehicles</string>

    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="processing">Processing…</string>
    <string name="select_picture">Select Picture</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="error_field_required">This field is required</string>
    <string name="dialog_ProfileEditBack">Cancel changes and go back to previous screen?</string>
    <string name="cancel">Cancel</string>

    <string name="Back">Back</string>
    <string name="ok">OK</string>

    <string name="facebook_app_id">211882079187728</string>
    <string name="NoCarsYet">No vehicles yet</string>
    <string name="NoInternet">No Internet Connection</string>
    <string name="cardview_desc">Company Image</string>
    <string name="desc_company_icon">Company Icon</string>
    <string name="email_sent1">We sent a verification code to</string>
    <string name="email_sent2">Please enter this code on your first login.</string>

    <string name="logging_in">Logging in…</string>
    <string name="verification_code">CODE</string>
    <string name="verify_text">An email was sent to your registered email address, please input the verification code below</string>
    <string name="submit">Submit</string>
    <string name="verify_spams">If you don\'t see the verification email in your inbox, please check your Junk or Spam folders.</string>
    <string name="or">or</string>
    <string name="resend_email">RESEND EMAIL</string>
    <string name="having_trouble">Having Trouble?</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="plate_number">Plate Number</string>
    <string name="adding_car">Adding car…</string>
    <string name="deleting">Deleting…</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reg">Don\'t have an account? Sign up.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="send_new_password">SEND NEW PASSWORD</string>
    <string name="change_password_dialog">Enter your email address below and we\'ll send you instructions on how to change your password</string>
    <string name="step_1_verify_your_email">Step 1: Verify your Email</string>
    <string name="step_2_add_a_car">Step 2: Add a Car</string>
    <string name="step_3_setup_cc">Step 3: Setup Credit Card</string>
    <string name="Verifying">Verifying…</string>
    <string name="Loading">Loading…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oops">Oops, please try again</string>
    <string name="more_details">VIEW</string>
    <string name="loading_markers">Loading Markers</string>
    <string name="formatted_place_data">Name: %1$s\\nAddress: %2$s\\nPhone: %3$s\\nWebsite: %4$s\\nRating: %5$s\\nId: %6$s\\n</string>

    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="no_show">Failure to arrive at the reserved time will make your slot available for other users to be reserved. \nNO SHOW NO REFUND</string>
    <string name="paypal">PayPal</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="edit_profile">Update Info</string>
    <string name="reservation_note1">Reservations are subject to a parking charge set by the parking operator with a service fee as compensation in arranging the parking reservation.</string>
    <string name="reservation_note2">Parking charge is calculated based on the selected departure dates and times.</string>
    <string name="reservation_note3">The actual departure dates and times at checkout will be the basis for the final parking charge.</string>
    <string name="reservation_note4">No refund will be issued for any overpayment for hours or days not used.</string>
    <string name="peso">\u20B1</string>

    <string name="c_2016_pick_a_park_inc">\u00A9 2016 Pick-A-Park Inc.</string>
    <string name="refresh">Refresh</string>
    <string name="payment_information">Payment Information</string>
    <string name="step_3_3">Step 3/3</string>
    <string name="sign_up">By signing up, I accept Pick-A-Parking\'s Terms of Service\nand Privacy Policy</string>
    <string name="i_agree">I Agree to the </string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_details">Account Details</string>

    <string name="title_activity_second_activiy">Interstitial</string>
    <string name="msg_welcome">Welcome to Admob. Click on the below button to launch the Interstitial ad.</string>
    <string name="btn_fullscreen_ad">Show Fullscreen Ad</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-0664570763252260/3326522424</string>
    <string name="interstitial_full_screen">ca-app-pub-0664570763252260/1769900428</string>

    <string name="marker_parking">Parking Marker</string>
    <string name="marker_dest">Destination Marker</string>
    <string name="marker_car">Car Marker</string>
    <string name="car_image">Icon of car</string>
    <string name="img_no_internet">No Internet</string>
    <string name="img_login_logo">Logo</string>
    <string name="img_nav_ic">Navigation Icon</string>
    <string name="img_car_list">Icon of car</string>
    <string name="img_ic_nearest">Company Logo</string>
    <string name="img_no_res">img_no_res</string>
    <string name="img_steps_1">Step 1</string>
    <string name="img_steps_2">Step 2</string>
    <string name="img_prof_bg">Background Image</string>
    <string name="img_prof_pic">Profile Picture</string>
    <string name="img_company_preview">Company Image</string>
    <string name="img_ic_reg">Icon</string>
    <string name="img_driver">Driver Image</string>
    <string name="logout">Logout</string>
    <string name="img_ic_logout">Logout Icon</string>
    <string name="img_calendar">Calendar Icon</string>
    <string name="img_steps_3">Step 3</string>
    <string name="services">Services</string>
    <string name="oops_something">Oops, something bad happened</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="success">success</string>
    <string name="title_activity_add_shared_parking_map">Map</string>
    <string name="title_activity_inquire_shared_parking">InquireSharedParking</string>
    <string name="title_activity_my_parking_details">MyParkingDetails</string>
    <string name="title_activity_edit_my_parking">EditMyParking</string>

    <array name="slot_status">
        <item>Available</item>
        <item>Unavailable</item>
    </array>

</resources>
