<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/img_ic_reg"
                    android:src="@drawable/ic_register" />

                <TextView
                    android:id="@+id/Register_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="Create an Account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:layout_marginTop="15dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/account_details"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_edittext_selector"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/ColorGray"
                        android:textColorHint="@color/LightGray"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/custom_edittext_selector"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/ColorGray"
                        android:textColorHint="@color/LightGray"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/custom_edittext_selector"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/ColorGray"
                        android:textColorHint="@color/LightGray"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/personal_information"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_edittext_selector"
                        android:drawablePadding="100dp"
                        android:hint="@string/first_name"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:textColor="@color/ColorGray"
                        android:textColorHint="@color/LightGray"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_edittext_selector"
                        android:drawablePadding="100dp"
                        android:hint="@string/last_name"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:textColor="@color/ColorGray"
                        android:textColorHint="@color/LightGray"
                        android:textSize="14sp" />


                    <EditText
                        android:id="@+id/date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/custom_edittext_selector"
                        android:clickable="true"
                        android:focusableInTouchMode="false"
                        android:gravity="center_vertical"
                        android:hint="@string/date_of_birth"
                        android:inputType="datetime"
                        android:maxLines="1"
                        android:textColor="@color/ColorGray"
                        android:textColorHint="@color/LightGray"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/custom_edittext_selector"
                        android:gravity="center_vertical"
                        android:hint="@string/mobile_no"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:textColor="@color/ColorGray"
                        android:textColorHint="@color/LightGray"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/custom_edittext_selector"
                        android:clickable="true"
                        android:focusableInTouchMode="false"
                        android:gravity="center_vertical"
                        android:hint="@string/gender"
                        android:maxLines="1"
                        android:textColor="@color/ColorGray"
                        android:textColorHint="@color/LightGray"
                        android:textSize="14sp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <CheckBox
                        android:id="@+id/checkBoxAgree"
                        android:layout_width="25dp"
                        android:theme="@style/AppTheme.Checkbox"
                        android:layout_height="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/i_agree"
                        android:textColor="#7d7d7d"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/termsandagreement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" TERMS OF USE"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="#7d7d7d"
                    android:textSize="12sp" />
                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_button_gray"
                    android:padding="14dp"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="14sp" />



            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#99ffffff"
        android:visibility="gone">


        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
</RelativeLayout>