<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#fff" >

    <!--
    ImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/verify_icon" />
        -->



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70"
                android:gravity="center"
                android:orientation="vertical" >
                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/password_recovery"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/change_password_dialog"
                    android:textColor="@color/ColorText"
                    android:textSize="14sp" />

                <EditText
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:ems="20"
                    android:textColor="#000000"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:padding="14dp"
                    android:textSize="18sp"
                    android:id="@+id/email" />

                <Button
                    android:id="@+id/send_password"
                    android:layout_width="wrap_content"
                    android:minWidth="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_button_green"
                    android:padding="14dp"
                    android:text="@string/send_new_password"
                    android:textColor="#fff"
                    android:textSize="20sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>