<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sharepark.activities.ChangePasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/appBar"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Passwords must be atleast 6 characters "
                android:textColor="@color/ColorText"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/current_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext_selector"
                android:ems="20"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/new_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_edittext_selector"
                android:ems="20"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext_selector"
                android:ems="20"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/send_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_button_green"
                android:minWidth="300dp"
                android:text="@string/confirm"
                android:textColor="#fff"
                android:textSize="16sp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
